--- a/webcomics/templates/home.html
+++ b/webcomics/templates/home.html
@@ -14,8 +14,8 @@
     <style>
       body {
         background-color: #2e2d2d;
-        background-image: url("{% static 'background.png' %}");
-        background-size: contain;
+        /*b0ackground-image: url("{% static 'background.png' %}");*/
+        background-size: cover;
         background-repeat: no-repeat;
         color: rgb(255, 255, 255);
       }
@@ -49,7 +49,6 @@
 
     {% load static %}
 
-    
     <a id="imagen" href="{% url 'about' %}">
       <img src="{% static 'surchaing.gif' %}" alt="Surchaing Manga" width="300" height="300">
     </a>
