--- a/webcomics/static/estilos/estiloshome.css
+++ b/webcomics/static/estilos/estiloshome.css
@@ -4,11 +4,25 @@
     src: url("/webcomics/static/Fuentes/");
 }
 
-.Header {
-    background-color: #494747;
+.surchain_nav {
+    width: 1270px;
+    background-color: #343232;
     display: flex;
     flex-wrap: wrap;
     gap: 30px;
+    margin: 0 auto;
+}
+
+.surchain_nav input, button {
+    background-color: #181616;
+    color:white;
+    border-radius: 10px;
+    border-color: white;
+}
+
+.surchain_nav input:hover {
+    border-radius: 10px;
+    border-color: white;
 }
 
 div.publicidad {
@@ -26,26 +40,22 @@ h1 {
     text-shadow: #181616;
 }
 
-div.contenedor {
+.contenedor_flexible {
     /* background-color: #181616; */
-    width: 100%;
-    height: 450px;
+    width: 1000px;
+    height: 0 auto;
     display: flex;
     flex-wrap: wrap;
-    gap: 30px;
-    margin-top: 50px;
-    /* opacity: 0.9; */
+    gap: 20px;
+    margin: 0 auto;
 }
-
-div .card {
+.card {
     font-family: "NikkyouSans";
-    margin-bottom: 5pc;
-    margin-bottom: 10px;
     background-color: #2e2d2d;
     border-color: black;
     color: white;
-    float: left;
     font-size: 20px;
+    width: 200px;
 }
 
 div.card:hover {
@@ -62,6 +72,7 @@ div.card:hover {
     width: 250px;
     height: 250px;
     float: right;
+    margin: 0 auto;
 }
 
 /*#imagen:hover {
@@ -71,18 +82,19 @@ div.card:hover {
 }
 */
 
-div.navegacion {
+.nav-footer {
     background-color: #181616;
     width: 100%;
     height: 55px;
-}
-
-footer div.end_footer {
-    background-color: #181616;
-    width: 100%;
-    height: 300px;
     border-color: #181616;
     text-align: center;
+}
+
+div.navegacion {
+    background-color: #181616;
+    width: 1269px;
+    height: 55px;
+    margin: 0 auto;
 }
 
 footer div.footer-container {
