cambios en los settings, nueva carpeta apps

--- a/webcomics/templates/home.html
+++ b/webcomics/templates/home.html
@@ -52,7 +52,7 @@
     {% load static %}
 
     <a id="imagen" href="{% url 'about' %}">
-      <img src="{% static 'surchaing.gif' %}" alt="Surchaing Manga" width="300" height="300">
+      <img src="{% static 'Imagenes\logo\surchaing.gif' %}" alt="Surchaing Manga" width="300" height="300">
     </a>
 
     <a id="imagen2" href="">
