--- a/webcomics/static/styles/home.css
+++ b/webcomics/static/styles/home.css
@@ -1,11 +1,20 @@
 @font-face {
-    font-family: "NikkyouSans, ";
-    src: url("/webcomics/static/Fuentes/NikkyouSans-mLKax.ttf");
-    src: url("/webcomics/static/Fuentes/");
+    font-family: "NikkyouSans";
+    src: url("../fonts/NikkyouSans/NikkyouSans-mLKax.ttf") format('truetype');
+    font-style: normal;
+}
+
+body {
+    font-family: "NikkyouSans";
+    background-image: url("../background.png");
+    background-size: cover;
+    background-position: center;
+    background-repeat: no-repeat;
+    height: 70vh;
 }
 
 .surchain_nav {
-    width: 1270px;
+    width: 100%;
     background-color: #343232;
     display: flex;
     flex-wrap: wrap;
@@ -30,36 +39,35 @@ div.publicidad {
     color: white;
     width: 100%;
     height: 50px;
-    top: 0;
-    left: 0;
 }
 
 h1 {
     text-align: center;
     font-family: "NikkyouSans";
-    text-shadow: #181616;
+    border: 1px white;
+    text-shadow: 2px 2px 4px white;
 }
 
 .contenedor_flexible {
-    /* background-color: #181616; */
-    width: 1000px;
-    height: 0 auto;
+    width: 100%;
     display: flex;
     flex-wrap: wrap;
+    justify-content: center;
+    align-items: center;
     gap: 20px;
     margin: 0 auto;
 }
+
 .card {
     font-family: "NikkyouSans";
     background-color: #2e2d2d;
-    border-color: black;
-    color: white;
+    padding: 20px;
     font-size: 20px;
-    width: 200px;
 }
 
 div.card:hover {
     background-color: #494747;
+    color: white;
     border-color: white;
 }
 
@@ -90,7 +98,7 @@ div.card:hover {
     text-align: center;
 }
 
-div.navegacion {
+.navegacion {
     background-color: #181616;
     width: 1269px;
     height: 55px;
@@ -101,20 +109,21 @@ footer div.footer-container {
     background-color: #181616;
     top: 0;
 }
+
 @media screen and (max-width: 748px) {
+    body {
+        background-repeat: repeat;
+    }
+
     div.contenedor {
         width: 100%;
         height: 623px;
     }
-}
 
-@media screen and (max-width: 748px) {
     div.contenedor {
         gap: 5px;
     }
-}
 
-@media screen and (max-width: 375px) {
     div.contenedor {
         gap: 1px;
     }
