--- a/webcomics/templates/home.html
+++ b/webcomics/templates/home.html
@@ -29,7 +29,7 @@
 
   </head>
   <body>
-
+    <div>
     <div class="surchain_nav">
       <p> Surchaing Manga Home </p>
       <img src="" alt="imagen">
@@ -43,6 +43,7 @@
       </form>
 
       <p> Prueba header </p>
+    </div>
     </div>
 
     <div class="publicidad"> 
