--- a/webcomics/templates/home.html
+++ b/webcomics/templates/home.html
@@ -1,49 +1,28 @@
 {% load static %}
 <!doctype html>
-<html lang="spanish">
-  <head>
-    <meta charset="utf-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1">
-    <meta name="robots" content="index, follow">
-    <meta name="theme-color" content="#09f">
-    <title> Surchaing Manga </title>
-    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
-    <link rel="stylesheet" href="{% static 'estilos/estiloshome.css' %}">
-    <link rel="shortcut icon" href="{% static 'surchaing_manga.png' %}">
-    <link rel="icon" type="icon/png" href="{static 'surchaing_manga.png'}" >
-    <style>
-      body {
-        background-color: #2e2d2d;
-        /*b0ackground-image: url("{% static 'background.png' %}");*/
-        background-size: cover;
-        background-repeat: no-repeat;
-        color: rgb(255, 255, 255);
-      }
+<html lang="es">
+    <head>
+        <meta charset="utf-8">
+        <meta name="viewport" content="width=device-width, initial-scale=1">
+        <meta name="robots" content="index, follow">
+        <title>Surchaing Manga</title>
+        <link rel="stylesheet" href="../static/styles/home.css">
+        <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css">
+        <link rel="shortcut icon" href="../static/surchaing_manga.png">
+        <link rel="icon" type="icon/png" href="../static/surchaing_manga.png" >
+    </head>
+<body>
 
-      @media screen and (max-width: 375px) {
-        body {
-          background-repeat: repeat;
-        }
-      }
-    </style>
-
-  </head>
-  <body>
-    <div>
     <div class="surchain_nav">
-      <p> Surchaing Manga Home </p>
-      <img src="" alt="imagen">
-      <p> Usuario: No iniciado </p>
-      <button> Registrarse </button>
-
-      <form action="" method="get"> {% csrf_token %}
-        <label for="busqueda"> Buscar 🔍 </label> 
-        <input type="search" id="busqueda" name="termino" value="" placeholder="Busca un manga">
-        <button> Buscar </button>
-      </form>
-
-      <p> Prueba header </p>
-    </div>
+        <p> Surchaing Manga Home </p>
+        <img src="" alt="imagen">
+        <p> Usuario: No iniciado </p>
+        <button> Registrarse </button>
+        <form action="" method="get"> {% csrf_token %}
+            <label for="busqueda"> Buscar 🔍 </label> 
+            <input type="search" id="busqueda" name="termino" value="" placeholder="Busca un manga">
+            <button>Buscar</button>
+        </form>
     </div>
 
     <div class="publicidad"> 
@@ -51,7 +30,7 @@
     </div>
 
     <a id="imagen" href="{% url 'about' %}">
-      <img src="{% static 'Imagenes\logo\surchaing.gif' %}" alt="Surchaing Manga" width="300" height="300">
+      <img src="{% static 'surchaing.gif' %}" alt="Surchaing Manga" width="300" height="300">
     </a>
 
     <a id="imagen2" href="">
