--- a/webcomics/static/styles/home.css
+++ b/webcomics/static/styles/home.css
@@ -6,6 +6,7 @@
 
 body {
     font-family: "NikkyouSans";
+    margin: 0;
     background-image: url("../background.png");
     background-size: cover;
     background-position: center;
@@ -13,14 +14,34 @@ body {
     height: 70vh;
 }
 
-.surchain_nav {
-    width: 100%;
-    background-color: #343232;
+header {
     display: flex;
-    flex-wrap: wrap;
-    gap: 30px;
-    margin: 0 auto;
+    height: 75px;
+    background-color: #343232;
+    justify-content: space-between;
+    align-items: center;
+    padding: 10px
 }
+
+.logo {
+    display: flex;
+    align-items: center;
+}
+
+.logo img {
+    width: 10%;
+}
+
+nav a {
+    flex: 1;
+    font-weight: 600;
+    padding-right: 10px;
+}
+
+nav a:hover {
+    color: white
+}
+
 
 .surchain_nav input, button {
     background-color: #181616;
@@ -91,6 +112,7 @@ div.card:hover {
 */
 
 .nav-footer {
+    display: inline-block; 
     background-color: #181616;
     width: 100%;
     height: 55px;
@@ -98,16 +120,8 @@ div.card:hover {
     text-align: center;
 }
 
-.navegacion {
+.pagination {
     background-color: #181616;
-    width: 1269px;
-    height: 55px;
-    margin: 0 auto;
-}
-
-footer div.footer-container {
-    background-color: #181616;
-    top: 0;
 }
 
 @media screen and (max-width: 748px) {
