fix: directories syntax

--- a/webcomics/static/styles/home.css
+++ b/webcomics/static/styles/home.css
@@ -55,7 +55,7 @@ nav a:hover {
     border-color: white;
 }
 
-div.publicidad {
+.publicidad {
     background-color: #181616;
     color: white;
     width: 100%;
