--- a/webcomics/templates/index.html
+++ b/webcomics/templates/index.html
@@ -1,5 +1,5 @@
 {% extends "./layouts/base.html" %}
-{% block title %} Inicio - Surchaing Manga {% endblock %}
+{% block title %}Inicio{% endblock %}
 
 {% block  content %}
 
