--- a/webcomics/static/styles/style.css
+++ b/webcomics/static/styles/style.css
@@ -1,8 +1,17 @@
+body {
+    font-family: "NikkyouSans";
+    margin: 0;
+    background-image: url("../background.png");
+    background-size: cover;
+    background-position: center;
+    background-repeat: no-repeat;
+    height: 70vh;
+}
+
 .publicidad {
     background-color: #181616;
     color: white;
     width: 100%;
     height: 50px;
 }
-
 
