Cambios realizados en urls, views y settings py

--- a/webcomics/templates/components/nav.html
+++ b/webcomics/templates/components/nav.html
@@ -57,7 +57,7 @@
                 search<i class="fas fa-chevron-right ps-2"></i></a>
             </li>
           </ul>
-          <input type="search" class="form-control" placeholder="Buscar" aria-label="Buscar" />
+          <input type="search" class="form-control" placeholder="Buscar" aria-label="Buscar" name=""/>
         </div>
         <a href="#!" class="text-white"><i class="fas fa-search ps-3"></i></a>
       </form>
