--- a/webcomics/templates/components/nav.html
+++ b/webcomics/templates/components/nav.html
@@ -64,15 +64,15 @@
 
       <ul class="navbar-nav ms-3">
         <li class="nav-item me-3">
-          <a class="nav-link d-flex align-items-center" href="#!">IMDbPro</a>
+          <a class="nav-link d-flex align-items-center" href="{% url 'imdbpro' %}">IMDbPro</a>
         </li>
         <li class="nav-item">
-          <a class="nav-link d-flex align-items-center me-3" href="#!">
+          <a class="nav-link d-flex align-items-center me-3" href="{% url 'watchlist' %}">
             <i class="fas fa-bookmark pe-2"></i> Watchlist
           </a>
         </li>
         <li class="nav-item" style="width: 65px;">
-          <a class="nav-link d-flex align-items-center" href="#!">Registrarse</a>
+          <a class="nav-link d-flex align-items-center" href="{% url 'registrarse' %}">Registrarse</a>
         </li>
       </ul>
     </div>
