--- a/webcomics/templates/components/nav.html
+++ b/webcomics/templates/components/nav.html
@@ -1,98 +1,45 @@
-<<<<<<< HEAD
-<nav class="navbar navbar-dark bg-dark navbar-expand-dark">
-    <div class="container-fluid">
+<nav class="navbar navbar-expand-lg navbar-dark bg-dark">
+    <!-- Container wrapper -->
+    <div class="container">
         <!-- LOGO -->
-        <div class="navbar-brand">
-            <a class="navbar-brand" href="/">
-                <img src="../static/img/logo/surchaing.gif" alt="Surchain Manga" width="150px">
-            </a>
-        </div>
-        <!-- Menu desplegable para pantallas pequeñas -->
-        <div class="collapse navbar-collapse" id="menu">
-            <ul class="navbar-nav">
-                <li class="nav-item"><a class="nav-link" href="#">chemen</a></li>
-                <li class="nav-item"><a class="nav-link" href="#">chemen</a></li>
-                <li class="nav-item"><a class="nav-link" href="#">chemen</a></li>
+        <a class="navbar-brand" href="#"><img id="Surchaing-logo"
+            src="../static/src/logo/logo.gif" alt="Surchaing Manga"
+            draggable="false" height="70" /></a>
+
+        <!-- Barra de búsqueda -->
+        <form class="d-flex align-items-center w-100 form-search" id="SearchBar">
+            <div class="input-group mb-3">
+                <input type="search" class="form-control" placeholder="Buscar" aria-label="Buscar" name=""/>
+                <div class="input-group-append">
+                    <button class="btn btn-primary" type="button">
+                        <i class="bi bi-search"></i>
+                    </button>
+                </div>
+            </div>
+        </form>
+
+        <!-- Collapsible wrapper -->
+        <div class="collapse navbar-collapse" id="navbarSupportedContent">
+            <!-- Left links -->
+            <!-- Left links -->
+            <span></span>
+            <span></span>
+            <ul class="navbar-nav ms-3">
+                <li class="nav-item me-3">
+                    <a class="nav-link d-flex align-items-center" href="{% url 'imdbpro' %}">IMDbPro</a>
+                </li>
+                <li class="nav-item">
+                    <a class="nav-link d-flex align-items-center me-3" href="{% url 'watchlist' %}">
+                        <i class="fas fa-bookmark pe-2"></i> Watchlist
+                    </a>
+                </li>
+                <li class="nav-item" style="width: 65px;">
+                    <a class="nav-link d-flex align-items-center" href="{% url 'registrarse' %}">Registrarse</a>
+                </li>
             </ul>
         </div>
-=======
-<nav class="navbar navbar-expand-lg navbar-dark bg-dark">
-  <!-- Container wrapper -->
-  <div class="container">
-    <!-- Navbar brand -->
-    <a class="navbar-brand" href="#"><img id="Surchaing-logo"
-        src="../static/src/logo.png" alt="Surchaing Manga"
-        draggable="false" height="40" /></a>
-
-    <!-- Toggle button -->
-    <button class="navbar-toggler" type="button" data-mdb-toggle="collapse"
-      data-mdb-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false"
-      aria-label="Toggle navigation">
-      <i class="fas fa-bars"></i>
-    </button>
-
-    <!-- Collapsible wrapper -->
-    <div class="collapse navbar-collapse" id="navbarSupportedContent">
-      <!-- Left links -->
-      <!-- Left links -->
-
-      <form class="d-flex align-items-center w-100 form-search">
-        <div class="input-group">
-          <button class="btn btn-light dropdown-toggle shadow-0" type="button" data-mdb-toggle="dropdown"
-            aria-expanded="false" style="padding-bottom: 0.4rem;">
-            All
-          </button>
-          <ul class="dropdown-menu dropdown-menu-dark fa-ul">
-            <li>
-              <a class="dropdown-item" href="#"><span class="fa-li pe-2"><i class="fas fa-search"></i></span>All</a>
-            </li>
-            <li>
-              <a class="dropdown-item" href="#"><span class="fa-li pe-2"><i
-                    class="fas fa-film"></i></span>Titles</a>
-            </li>
-            <li>
-              <a class="dropdown-item" href="#"><span class="fa-li pe-2"><i class="fas fa-tv"></i></span>TV
-                Episodes</a>
-            </li>
-            <li>
-              <a class="dropdown-item" href="#"><span class="fa-li pe-2"><i
-                    class="fas fa-user-friends"></i></span>Celebs</a>
-            </li>
-            <li>
-              <a class="dropdown-item" href="#"><span class="fa-li pe-2"><i
-                    class="fas fa-building"></i></span>Companies</a>
-            </li>
-            <li>
-              <a class="dropdown-item" href="#"><span class="fa-li pe-2"><i
-                    class="fas fa-key"></i></span>Keywords</a>
-            </li>
-            <li>
-              <hr class="dropdown-divider" />
-            </li>
-            <li>
-              <a class="dropdown-item" href="#"><span class="fa-li pe-2"><i
-                    class="fas fa-search-plus"></i></span>Advanced
-                search<i class="fas fa-chevron-right ps-2"></i></a>
-            </li>
-          </ul>
-          <input type="search" class="form-control" placeholder="Buscar" aria-label="Buscar" name=""/>
-        </div>
-        <a href="#!" class="text-white"><i class="fas fa-search ps-3"></i></a>
-      </form>
-
-      <ul class="navbar-nav ms-3">
-        <li class="nav-item me-3">
-          <a class="nav-link d-flex align-items-center" href="{% url 'imdbpro' %}">IMDbPro</a>
-        </li>
-        <li class="nav-item">
-          <a class="nav-link d-flex align-items-center me-3" href="{% url 'watchlist' %}">
-            <i class="fas fa-bookmark pe-2"></i> Watchlist
-          </a>
-        </li>
-        <li class="nav-item" style="width: 65px;">
-          <a class="nav-link d-flex align-items-center" href="{% url 'registrarse' %}">Registrarse</a>
-        </li>
-      </ul>
->>>>>>> 504e7adb00d5551b23f4e50de180bd6436104e3c
+        <!-- Collapsible wrapper -->
     </div>
+  <!-- Container wrapper -->
 </nav>
+<!-- Navbar -->
