--- a/webcomics/templates/components/nav.html
+++ b/webcomics/templates/components/nav.html
@@ -5,7 +5,10 @@
         <a class="navbar-brand" href="#"><img id="Surchaing-logo"
             src="../static/src/logo/logo.gif" alt="Surchaing Manga"
             draggable="false" height="70" /></a>
-
+        <!-- Botón para abrir menu desplegable -->
+        <button type="button" class="navbar-toggler">
+            <span class="navbar-toggler-icon" data-bs-toggle="collapse" data-bs-target="#NavMenu"></span>
+        </button>
         <!-- Barra de búsqueda -->
         <form class="d-flex align-items-center w-100 form-search" id="SearchBar">
             <div class="input-group mb-3">
@@ -17,13 +20,8 @@
                 </div>
             </div>
         </form>
-
         <!-- Collapsible wrapper -->
-        <div class="collapse navbar-collapse" id="navbarSupportedContent">
-            <!-- Left links -->
-            <!-- Left links -->
-            <span></span>
-            <span></span>
+        <div id="NavMenu" class="collapse navbar-collapse">
             <ul class="navbar-nav ms-3">
                 <li class="nav-item me-3">
                     <a class="nav-link d-flex align-items-center" href="{% url 'imdbpro' %}">IMDbPro</a>
