fix: navbar (again lol)

--- a/webcomics/static/styles/style.css
+++ b/webcomics/static/styles/style.css
@@ -1,14 +1,20 @@
 body {
-    font-family: "NikkyouSans";
-    background-image: url("../src/background.jpg");
+    background-image: url("../src/background_nofocus.jpg");
     background-size: cover;
     background-position: center;
     background-attachment: fixed;
     height: 100%;
 }
 
-menu {
-    display: flex;
+#Page {
+    font-family: "NikkyouSans";
+    margin: 0 75px 0 75px;
+    background-color: #343a40;
+    color: white;
+}
+
+#Page h1 {
+    text-align: center;
 }
 
 .publicidad {
@@ -18,6 +24,77 @@ menu {
     height: 50px;
 }
 
-#SearchBar {
-    margin: 15px 20px 0 5px;
+header {
+    position: fixed;
+    width: 100%;
+    background: linear-gradient(180deg, rgba(0, 0, 0, 0.7), rgba(0, 0, 0, 0));
+    transition: background 0.3s ease-in-out;
+}
+
+header.sticky {
+    background: #1d2021;
+    position: fixed;
+    top: 0;
+    left: 0;
+    width: 100%;
+}
+
+#NavWrapper {
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+    width: 100%;
+}
+
+.navbar-nav {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    width: 100%;
+    margin: 0;
+    padding: 0;
+    list-style: none;
+}
+
+.nav-item {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    margin: 0 15px; /* Espaciado entre elementos */
+}
+
+.nav-link {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    color: #fff; /* Asegúrate de que el texto sea blanco */
+    text-decoration: none;
+    padding: 10px 15px;
+    text-align: center;
+}
+
+@media screen and (max-width: 992px) {
+    header {
+        position: static;
+        background: #1d2021
+    }
+
+    header.sticky {
+        position: static;
+        background: #1d2021
+    }
+    
+    #NavWrapper {
+        margin: 0 0 0 0;
+        width: 100%;
+        max-width: 100%;
+    }
+
+    #Page {
+        margin: 0 0 0 0;
+    }
+
+    #Icons {
+        display: 
+    }
 }
