--- a/webcomics/templates/components/nav.html
+++ b/webcomics/templates/components/nav.html
@@ -1,42 +1,33 @@
-<nav class="navbar navbar-expand-lg navbar-dark bg-dark">
+<nav class="navbar navbar-expand-lg navbar-dark bg-transparent">
     <!-- Container wrapper -->
-    <div class="container">
+    <div id="NavWrapper" class="container">
         <!-- LOGO -->
-        <a class="navbar-brand" href="#"><img id="Surchaing-logo"
+        <a class="navbar-brand" href="/"><img id="Surchaing-logo"
             src="../static/src/logo/logo.gif" alt="Surchaing Manga"
             draggable="false" height="70" /></a>
         <!-- Botón para abrir menu desplegable -->
         <button type="button" class="navbar-toggler">
             <span class="navbar-toggler-icon" data-bs-toggle="collapse" data-bs-target="#NavMenu"></span>
         </button>
-        <!-- Barra de búsqueda -->
-        <form class="d-flex align-items-center w-100 form-search" id="SearchBar">
-            <div class="input-group mb-3">
-                <input type="search" class="form-control" placeholder="Buscar" aria-label="Buscar" name=""/>
-                <div class="input-group-append">
-                    <button class="btn btn-primary" type="button">
-                        <i class="bi bi-search"></i>
-                    </button>
-                </div>
-            </div>
-        </form>
         <!-- Collapsible wrapper -->
         <div id="NavMenu" class="collapse navbar-collapse">
-            <ul class="navbar-nav ms-3">
+            <ul class="navbar-nav">
                 <li class="nav-item me-3">
-                    <a class="nav-link d-flex align-items-center" href="{% url 'imdbpro' %}">IMDbPro</a>
-                </li>
-                <li class="nav-item">
-                    <a class="nav-link d-flex align-items-center me-3" href="{% url 'watchlist' %}">
-                        <i class="fas fa-bookmark pe-2"></i> Watchlist
-                    </a>
-                </li>
-                <li class="nav-item" style="width: 65px;">
-                    <a class="nav-link d-flex align-items-center" href="{% url 'registrarse' %}">Registrarse</a>
+                    <a class="nav-link d-flex align-items-center text-center" href="{% url 'imdbpro' %}">IMDbPro</a>
                 </li>
             </ul>
         </div>
         <!-- Collapsible wrapper -->
+        <div id="Icons">
+            <ul class="navbar-nav">
+                <li class="nav-item"><a class="nav-link" href="#"><i class="bi bi-search"></i></a></li>
+                <a class="nav-link" href="#">
+                    <button class="btn btn-outline-primary">
+                            <li class="nav-item">INGRESA</li>
+                    </button>
+                </a>
+            </ul>
+        </div>
     </div>
   <!-- Container wrapper -->
 </nav>
