--- a/webcomics/templates/layouts/base.html
+++ b/webcomics/templates/layouts/base.html
@@ -1,21 +1,20 @@
 <!DOCTYPE html>
 <html>
     <head>
-        <title>{% block title %} {% endblock %} - Surchaing Manga</title>
+        <title>{% block title %} {% endblock %} | Surchaing Manga</title>
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
         {% include "../components/head.html"%}
     </head>
     <body>
-        {% include "../components/nav.html"%}
-        <div class="publicidad"> 
-            <p> Espacio para pubilcidad </p>
-        </div>
-        <h1>PENE</h1>
-        {% block  content%}
+        <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.bundle.min.js" integrity="sha384-MrcW6ZMFYlzcLA8Nl+NtUVF0sA7MsXsP1UyJoMp4YLEuNSfAP+JcXn/tWtIaxVXM" crossorigin="anonymous"></script>
+        <script src="../../static/scripts/navbar.js"></script>
+        <header>
+            {% include "../components/nav.html"%}
+        </header>
+        <div id="Page">
+            {% block  content%}
 
-        {% endblock %}
-        <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js" integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo" crossorigin="anonymous"></script>
-        <script src="https://cdn.jsdelivr.net/npm/popper.js@1.14.7/dist/umd/popper.min.js" integrity="sha384-UO2eT0CpHqdSJQ6hJty5KVphtPhzWj9WO1clHTMGa3JDZwrnQq4sF86dIHNDz0W1" crossorigin="anonymous"></script>
-        <script src="https://cdn.jsdelivr.net/npm/bootstrap@4.3.1/dist/js/bootstrap.min.js" integrity="sha384-JjSmVgyd0p3pXB1rRibZUAYoIIy6OrQ6VrjIEaFf/nJGzIxFDsf4x0xIM+B07jRM" crossorigin="anonymous"></script>
+            {% endblock %}
+        </div>
     </body>
 </html>
