--- a/webcomics/templates/components/nav.html
+++ b/webcomics/templates/components/nav.html
@@ -21,7 +21,7 @@
         <div id="Icons">
             <ul class="navbar-nav">
                 <li class="nav-item"><a class="nav-link" href="#"><i class="bi bi-search"></i></a></li>
-                <a class="nav-link" href="#">
+                <a class="nav-link" href="{% url 'ingresar' %}">
                     <button class="btn btn-outline-primary">
                             <li class="nav-item">INGRESA</li>
                     </button>
