--- a/webcomics/static/styles/home.css
+++ b/webcomics/static/styles/home.css
@@ -1,161 +1,3 @@
-@font-face {
-    font-family: "NikkyouSans";
-    src: url("../fonts/NikkyouSans/NikkyouSans-mLKax.ttf") format('truetype');
-    font-style: normal;
-}
-
-body {
-    font-family: "NikkyouSans";
-    margin: 0;
-    background-image: url("../background.png");
-    background-size: cover;
-    background-position: center;
-    background-repeat: no-repeat;
-    height: 70vh;
-}
-
-header {
-    display: flex;
-    height: 75px;
-    background-color: #343232;
-    justify-content: space-between;
-    align-items: center;
-    padding: 10px
-}
-
-.logo {
-    display: flex;
-    align-items: center;
-}
-
-.logo img {
-    width: 10%;
-}
-
-nav a {
-    flex: 1;
-    font-weight: 600;
-    padding-right: 10px;
-}
-
-nav a:hover {
-    color: white
-}
-
-
-.surchain_nav input, button {
-    background-color: #181616;
-    color:white;
-    border-radius: 10px;
-    border-color: white;
-}
-
-.surchain_nav input:hover {
-    border-radius: 10px;
-    border-color: white;
-}
-
-.publicidad {
-    background-color: #181616;
-    color: white;
-    width: 100%;
-    height: 50px;
-}
-
-h1 {
-    text-align: center;
-    font-family: "NikkyouSans";
-    border: 1px white;
-    text-shadow: 2px 2px 4px white;
-}
-
-.contenedor_flexible {
-    width: 100%;
-    display: flex;
-    flex-wrap: wrap;
-    justify-content: center;
-    align-items: center;
-    gap: 20px;
-    margin: 0 auto;
-}
-
-.card {
-    font-family: "NikkyouSans";
-    background-color: #2e2d2d;
-    padding: 20px;
-    font-size: 20px;
-}
-
-div.card:hover {
-    background-color: #494747;
-    color: white;
-    border-color: white;
-}
-
-#imagen {
-    width: 200px;
-    height: 0px;
-}
-
-#imagen2 {
-    width: 250px;
-    height: 250px;
-    float: right;
-    margin: 0 auto;
-}
-
-/*#imagen:hover {
-    width: 200px;
-    height: 200px;
-    border-color: white;
-}
-*/
-
-.nav-footer {
-    display: inline-block; 
-    background-color: #181616;
-    width: 100%;
-    height: 55px;
-    border-color: #181616;
-    text-align: center;
-}
-
-.pagination {
-    background-color: #181616;
-}
-
-@media screen and (max-width: 748px) {
-    body {
-        background-repeat: repeat;
-    }
-
-    div.contenedor {
-        width: 100%;
-        height: 623px;
-    }
-
-    div.contenedor {
-        gap: 5px;
-    }
-
-    div.contenedor {
-        gap: 1px;
-    }
-
-    div.Header p img button {
-        gap: 1px;
-    }
-
-    #imagen {
-        width: 100px;
-        height: 100px;
-        margin: 0px;
-    }
-
-    #image2 {
-        width: 100px;
-        height: 100px;
-        padding: 10px 10px;
-    }
-
+#welcome {
+    background-image: url('../static/src/background.jpg');
 }
