--- a/webcomics/templates/components/nav.html
+++ b/webcomics/templates/components/nav.html
@@ -1,3 +1,7 @@
+{% block extra_css %}
+    <link rel="stylesheet" href="../../static/styles/header.css">
+{% endblock%}
+
 <nav class="navbar navbar-expand-lg navbar-dark bg-transparent">
     <!-- Container wrapper -->
     <div id="NavWrapper" class="container">
