--- a/webcomics/templates/index.html
+++ b/webcomics/templates/index.html
@@ -1,18 +1,16 @@
 {% extends "./layouts/base.html" %}
+{% load static %}
 {% block title %}Inicio{% endblock %}
+{% block extra_css %}
+    <link rel="stylesheet" href='{% static 'styles/home.css'%}'">
+<link rel="stylesheet" href="{% static '/styles/hero.css'%}">
+{% endblock %}
 
-{% block  content %}
-<!-- Hero -->
-<div class="container p-4 shadow-4 rounded-3" style="background-color:;">
-    <h2>Hello world!</h2>
-    <p>
-        This is a simple hero unit, a simple Hero-style component for calling extra
-        attention to featured content or information.
-    </p>
-    <p>
-        It uses utility classes for typography and spacing to space content out within the
-        larger container.
-    </p>
-</div>
-<!-- Hero -->
+{% block content %}
+    <div class="hero">
+        <div class="hero-content container">
+            <h1>Surchaing aún está en construcción</h1>
+            <p>Perdon por no hacer push OwO</p>
+        </div>
+    </div>
 {% endblock %}
