--- a/webcomics/static/styles/header.css
+++ b/webcomics/static/styles/header.css
@@ -3,6 +3,7 @@ header {
     width: 100%;
     background: linear-gradient(180deg, rgba(0, 0, 0, 0.7), rgba(0, 0, 0, 0));
     transition: background 0.3s ease-in-out;
+    z-index: 2;
 }
 
 header.sticky {
