--- a/webcomics/templates/components/nav.html
+++ b/webcomics/templates/components/nav.html
@@ -17,14 +17,14 @@
         <div id="NavMenu" class="collapse navbar-collapse">
             <ul class="navbar-nav">
                 <li class="nav-item me-3">
-                    <a class="nav-link d-flex align-items-center text-center" href="{% url 'imdbpro' %}">IMDbPro</a>
+                    <a class="nav-link d-flex align-items-center text-center" href="{% url 'index' %}">Inicio</a>
                 </li>
                 
                 <li class="nav-item me-3">
-                    <a class="nav-link d-flex align-items-center text-center" href="{% url 'imdbpro' %}">IMDbPro</a>
+                        <a class="nav-link d-flex align-items-center text-center" href="{% url 'imdbpro'%}">pipi</a>
                 </li>
                 <li class="nav-item me-3">
-                    <a class="nav-link d-flex align-items-center text-center" href="{% url 'imdbpro' %}">IMDbPro</a>
+                    <a class="nav-link d-flex align-items-center text-center" href="{% url 'about' %}">Acerca de</a>
                 </li>
 
             </ul>
