--- a/webcomics/templates/index.html
+++ b/webcomics/templates/index.html
@@ -3,7 +3,7 @@
 {% block title %}Inicio{% endblock %}
 {% block extra_css %}
     <link rel="stylesheet" href='{% static 'styles/home.css'%}'">
-<link rel="stylesheet" href="{% static '/styles/hero.css'%}">
+    <link rel="stylesheet" href="{% static '/styles/hero.css'%}">
 {% endblock %}
 
 {% block content %}
@@ -13,4 +13,10 @@
             <p>Perdon por no hacer push OwO</p>
         </div>
     </div>
+    <h1>PENE</h1>
+    <h1>PENE</h1>
+    <h1>PENE</h1>
+    <h1>PENE</h1>
+    <h1>PENE</h1>
+    <h1>PENE</h1>
 {% endblock %}
