--- a/webcomics/templates/components/nav.html
+++ b/webcomics/templates/components/nav.html
@@ -21,7 +21,7 @@
                 </li>
                 
                 <li class="nav-item me-3">
-                        <a class="nav-link d-flex align-items-center text-center" href="{% url 'imdbpro'%}">pipi</a>
+                        <a class="nav-link d-flex align-items-center text-center" href="#">pipi</a>
                 </li>
                 <li class="nav-item me-3">
                     <a class="nav-link d-flex align-items-center text-center" href="{% url 'about' %}">Acerca de</a>
