--- a/webcomics/templates/layouts/base.html
+++ b/webcomics/templates/layouts/base.html
@@ -6,26 +6,26 @@
         {% block extra_css %}{% endblock %}
     </head>
     <body>
-        <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.bundle.min.js" integrity="sha384-MrcW6ZMFYlzcLA8Nl+NtUVF0sA7MsXsP1UyJoMp4YLEuNSfAP+JcXn/tWtIaxVXM" crossorigin="anonymous"></script>
-        <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js" integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo" crossorigin="anonymous"></script>
-        <script src="../../static/scripts/navbar.js"></script>
-        <script src="https://cdn.jsdelivr.net/npm/bootstrap@4.3.1/dist/js/bootstrap.min.js" integrity="sha384-JjSmVgyd0p3pXB1rRibZUAYoIIy6OrQ6VrjIEaFf/nJGzIxFDsf4x0xIM+B07jRM" crossorigin="anonymous"></script>
-        <header>
-            {% include "../components/nav.html"%}
-        </header>
-        {% block  content%}
+        {% include "../components/loading.html"%}
+        <div id="wrapper">
+            <header>
+                {% include "../components/nav.html"%}
+            </header>
+            {% block  content%}
 
-        {% endblock %}
-        <!--
-        {% if manga_name %}
-        <p> Manga encontrado: {{ manga_name.get }} </p>
-        {% else %}
-        -->
-        {% endif %}
-        <!--
-            Los if se ejecutan cuando se vuelven a llamar esta plantilla
-            Y se cumpla ciertas condiciones.
-            La plantilla de base es para todas las páginas, no tiene sentido mostrar algo de "mangas encontrados"
-        -->
-    </body>
-</html>
+            {% endblock %}
+            <!--
+            {% if manga_name %}
+            <p> Manga encontrado: {{ manga_name.get }} </p>
+            {% else %}
+            -->
+            {% endif %}
+            <!--
+                Los if se ejecutan cuando se vuelven a llamar esta plantilla
+                Y se cumpla ciertas condiciones.
+                La plantilla de base es para todas las páginas, no tiene sentido mostrar algo de "mangas encontrados"
+            -->
+        </div>
+        {% include "../components/scripts-import.html" %}
+        </body>
+    </html>
