--- a/webcomics/templates/index.html
+++ b/webcomics/templates/index.html
@@ -9,8 +9,8 @@
 {% block content %}
     <div class="hero">
         <div class="hero-content container">
-            <h1>Surchaing aún está en construcción</h1>
-            <p>Perdon por no hacer push OwO</p>
+            <h1>¡Bienvenido a Surchaing!</h1>
+            <p>[Inserte slogan picho aquí]</p>
         </div>
     </div>
     <h1>PENE</h1>
