--- a/webcomics/templates/components/nav.html
+++ b/webcomics/templates/components/nav.html
@@ -21,7 +21,7 @@
                 </li>
                 
                 <li class="nav-item me-3">
-                        <a class="nav-link d-flex align-items-center text-center" href="#">pipi</a>
+                        <a class="nav-link d-flex align-items-center text-center" href="#">Catálogo</a>
                 </li>
                 <li class="nav-item me-3">
                     <a class="nav-link d-flex align-items-center text-center" href="{% url 'about' %}">Acerca de</a>
@@ -32,7 +32,7 @@
         <!-- Collapsible wrapper -->
         <div id="Icons">
             <ul class="navbar-nav">
-                <li class="nav-item"><a class="nav-link" href="#"><i class="bi bi-search"></i></a></li>
+                    <li class="nav-item"><a class="nav-link" href="{% url 'search' %}"><i class="bi bi-search"></i></a></li>
                 <a class="nav-link" href="{% url 'ingresar' %}">
                     <button class="btn btn-outline-primary">
                             <li class="nav-item">INGRESA</li>
