--- a/webcomics/templates/about.html
+++ b/webcomics/templates/about.html
@@ -1,8 +1,25 @@
 {% extends "./layouts/base.html" %}
-{% block title %}Inicio{% endblock %}
+{% load static %}
+{% block title %}Buscar{% endblock %}
+{% block extra_css %}
+    <link rel="stylesheet" href='{% static '/styles/about.css'%}'">
+{% endblock %}
 
 {% block  content %}
-<h1>Acerca de</h1>
+
+<div class="hero">
+    <div class="hero-content container">
+        <h1>Acerca de</h1>
+    </div>
+</div>
+<container >
+<h1>PENE</h1>
+<h1>PENE</h1>
+<h1>PENE</h1>
+<h1>PENE</h1>
+<h1>PENE</h1>
+<h1>PENE</h1>
+
 
 {% endblock %}
 
