--- a/webcomics/templates/index.html
+++ b/webcomics/templates/index.html
@@ -2,8 +2,7 @@
 {% load static %}
 {% block title %}Inicio{% endblock %}
 {% block extra_css %}
-    <link rel="stylesheet" href='{% static 'styles/home.css'%}'">
-    <link rel="stylesheet" href="{% static '/styles/hero.css'%}">
+    <link rel="stylesheet" href='{% static '/styles/home.css'%}'">
 {% endblock %}
 
 {% block content %}
@@ -13,10 +12,12 @@
             <p>[Inserte slogan picho aquí]</p>
         </div>
     </div>
-    <h1>PENE</h1>
-    <h1>PENE</h1>
-    <h1>PENE</h1>
-    <h1>PENE</h1>
-    <h1>PENE</h1>
-    <h1>PENE</h1>
+    <div class="container">
+        <h1>PENE</h1>
+        <h1>PENE</h1>
+        <h1>PENE</h1>
+        <h1>PENE</h1>
+        <h1>PENE</h1>
+        <h1>PENE</h1>
+    </div>
 {% endblock %}
