--- a/webcomics/static/styles/home.css
+++ b/webcomics/static/styles/home.css
@@ -1,3 +1,54 @@
-#welcome {
-    background-image: url('../static/src/background.jpg');
+.hero {
+    position: relative;
+    background-image: url('../src/backgrounds/background.gif');
+    background-size: cover;
+    background-position: center;
+    height: 100vh;
+    display: flex;
+    align-items: center;
+    justify-content: left;
+    color: white;
+    z-index: 1;
+}
+
+.hero::after {
+    content: '';
+    position: absolute;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
+    background: rgba(0, 0, 0, 0.85);
+}
+
+.hero-content {
+    position: relative;
+    padding: 0 15px 0 15px;
+    z-index: 2;
+}
+
+.hero h1 {
+    font-family: NikkyouSans;
+    font-size: 3rem;
+    margin: 0;
+}
+
+.hero p {
+    font-size: 1.5rem;
+    margin: 20px 0;
+}
+
+.hero .btn {
+    display: inline-block;
+    padding: 10px 20px;
+    background: red;
+    color: white;
+    text-decoration: none;
+    font-size: 1.2rem;
+    border-radius: 5px;
+    transition: background 0.3s;
+}
+
+.hero .btn:hover {
+    background: darkred;
 }
