feat: reorganizar archivos estáticos
- Mover archivos CSS a la carpeta `static/css/`
  - about.css
  - font-import.css
  - footer.css
  - header.css
  - home.css
  - loading.css
  - manga-slider.css
  - style.css

- Mover archivos JavaScript a la carpeta `static/js/`
  - header.js
  - loading.js
  - manga-slider.js

- Mover fuentes a la carpeta `static/fonts/`
  - acmesabb_tt/
    - ACMESecretAgentBB_BoldItal.ttf
    - ACMESecretAgentBB_Ital.ttf
    - ACMESecretAgentBB_Reg.ttf
    - fontinfo.txt
    - __MACOSX/
  - animeace3bb_ot/
    - AnimeAce3BB_BoldItalic.otf
    - AnimeAce3BB_Bold.otf
    - AnimeAce3BB_Italic.otf
    - AnimeAce3BB_Regular.otf
    - fontinfo.txt
    - __MACOSX/
  - bebas-neue-fontfabric/
    - BebasNeue(2014)ByFontFabric/
      - Bebas Neue - SIL Open Font License 1.1.pdf
      - BebasNeue-Bold.otf
      - BebasNeue-Bold.ttf
      - BebasNeue-Book.otf
      - BebasNeue-Book.ttf
      - BebasNeue-Light.otf
      - BebasNeue-Light.ttf
      - BebasNeue-Regular.otf
      - BebasNeue-Regular.ttf
      - BebasNeue-Thin.otf
      - BebasNeue-Thin.ttf
  - fff-azadliq/
    - OFL1_1_Licence/
      - OFL11.txt
      - OFL_Link.rtf
    - OTF/
      - FFF_AZADLIQ-Black.otf
    - TTF/
      - FFF_AZADLIQ-Black.ttf
    - WEB/
      - FFF_AZADLIQ-Black.eot
      - FFF_AZADLIQ-Black.woff
      - FFF_AZADLIQ-Black.woff2
  - Milker/
    - Milker.otf
  - NikkyouSans/
    - NikkyouSans-mLKax.ttf

- Mover imágenes a la carpeta `static/images/`
  - backgrounds/
    - background.gif
    - background.jpg
  - logo/
    - dark_logo.webp
    - light_logo.webp
    - loading_logo.gif

--- a/webcomics/static/css/home.css
+++ b/webcomics/static/css/home.css
@@ -54,11 +54,11 @@
 }
 
 .hero a:hover {
-    color: #6610f2;
+    color: #744fdc;
 }
 
 .hero a {
-    color: #744fdc;
+    color: #efefef;
 }
 
 .main-content h1 {
