--- a/webcomics/templates/components/loading.html
+++ b/webcomics/templates/components/loading.html
@@ -1,6 +1,6 @@
 {% load static %}
 {% block extra_css %}
-    <link rel="stylesheet" href="{% static "/styles/loading.css" %}">
+    <link rel="stylesheet" href="{% static "/css/loading.css" %}">
 {% endblock%}
 
 <div id="loading-screen">
