--- a/webcomics/templates/components/footer.html
+++ b/webcomics/templates/components/footer.html
@@ -1,6 +1,6 @@
 {% load static %}
 {% block extra_css %}
-    <link rel="stylesheet" href="{% static "/styles/footer.css" %}">
+    <link rel="stylesheet" href="{% static "/css/footer.css" %}">
 {% endblock%}
 
 <footer>
