Revert "feat: reorganizar archivos estáticos"
This reverts commit d2b229bfca440a97fa796a76fbab14588a1ee283.

--- a/webcomics/static/styles/home.css
+++ b/webcomics/static/styles/home.css
@@ -54,11 +54,11 @@
 }
 
 .hero a:hover {
-    color: #744fdc;
+    color: #6610f2;
 }
 
 .hero a {
-    color: #efefef;
+    color: #744fdc;
 }
 
 .main-content h1 {
