--- a/webcomics/templates/index.html
+++ b/webcomics/templates/index.html
@@ -2,8 +2,8 @@
 {% load static %}
 {% block title %}Inicio{% endblock %}
 {% block extra_css %}
-    <link rel="stylesheet" href='{% static '/css/home.css'%}'">
-    <link rel="stylesheet" href='{% static '/css/manga-slider.css'%}'>
+    <link rel="stylesheet" href='{% static '/styles/home.css'%}'">
+    <link rel="stylesheet" href='{% static '/styles/manga-slider.css'%}'>
 {% endblock %}
 
 {% block content %}
@@ -68,5 +68,5 @@
 {% endblock %}
 
 {% block extra_js %}
-    <script src="{% static '/js/manga-slider.js'%}"></script>
+    <script src="{% static '/scripts/manga-slider.js'%}"></script>
 {% endblock %}
