--- a/webcomics/templates/components/footer.html
+++ b/webcomics/templates/components/footer.html
@@ -1,6 +1,6 @@
 {% load static %}
 {% block extra_css %}
-    <link rel="stylesheet" href="{% static "/styles/footer.css" %}">
+    <link rel="stylesheet" href="{% static "/css/footer.css" %}">
 {% endblock%}
 
 <footer>
@@ -21,7 +21,7 @@
         <div class="box">
             <figure>
                 <a href="#">
-                    <img src="{% static "/src/logo/light_logo.webp" %}" alt="Surchaing Manga">
+                    <img src="{% static "/images/logo/light_logo.webp" %}" alt="Surchaing Manga">
                 </a>
             </figure>
             <p>Esta página esta hecha con la intención de que crezcas como artista. Si eres creador de contenido de ayudará con la publicidad</p>
