--- a/webcomics/static/css/home.css
+++ b/webcomics/static/css/home.css
@@ -58,10 +58,33 @@
 }
 
 .hero a {
-    color: #744fdc;
+    color: #efefef;
 }
 
 .main-content h1 {
     text-align: center;
     padding: 20px 0 20px 0;
+}
+
+.welcome {
+    padding-top: 20px;
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+}
+
+.welcome img {
+    max-width: 320px;
+}
+
+@media screen and (min-width: 800px) {
+    .welcome {
+        flex-direction: row;
+    }
+
+    .welcome img {
+        float: right;
+        max-width: 320px;
+    }
 }
