--- a/webcomics/templates/components/ad_banner.html
+++ b/webcomics/templates/components/ad_banner.html
@@ -4,9 +4,10 @@
 
 #ad_container {
     color: #f5f5f5;
-    width: 100%;
-    height: 157px;
+    width: 900;
+    height: 90px;
     background-color: #1d2021;
+    margin-top: 20px
 }
 </style>
 {% endblock %}
