--- a/webcomics/templates/index.html
+++ b/webcomics/templates/index.html
@@ -52,16 +52,12 @@
                     <button class="next"></button>
                 </div>
             </div>
-            <div class="row" style="padding-top: 20px;">
-                <div class="col-lg-12 col-md-12 col-xs-12">
-                    <div class="d-flex">
-                        <img src="https://4get.edmateo.site/proxy?i=https%3A%2F%2Fduckduckgo.com%2Fi%2F70195e4f0f080f4a.png&s=cover" class="img-thumbnail w-75 h-75 align-self-center border-0">
-                        <div class="align-items-center" style="padding-left: 20px;">
-                            <h1 style="text-align: left;">Bienvenido a surchaing Manga...</h1>
-                            <p>Nuestra página está orientada a una mejora continua, tanto en flexibilidad de uso como en la visibilidad del usuario. Queremos que nuestra página se vea estéticamente agradable. Nuestra meta es que tú, como usuario, no solo quieras ver nuestros mangas, sino que también te animes a crear uno desde lo más profundo de tu imaginación y plasmarlo en una hoja. Que grandes artistas como tú crezcan sin encontrar límites. ¡Ayúdanos para ayudarte! <a href="/ingresar">¡Únete a nosotros!</a></p>
-                        </div>
-                    </div>
+            <div class="welcome">
+                <div class="text-box">
+                    <h2>Bienvenido a Surchaing Manga...</h2>
+                    <p>Nuestra página está orientada a una mejora continua, tanto en flexibilidad de uso como en la visibilidad del usuario. Queremos que nuestra página se vea estéticamente agradable. Nuestra meta es que tú, como usuario, no solo quieras ver nuestros mangas, sino que también te animes a crear uno desde lo más profundo de tu imaginación y plasmarlo en una hoja. Que grandes artistas como tú crezcan sin encontrar límites. ¡Ayúdanos para ayudarte! <a href="/ingresar">¡Únete a nosotros!</a></p>
                 </div>
+                <img src="https://upload.wikimedia.org/wikipedia/commons/thumb/9/9a/Codeberg_logo.svg/800px-Codeberg_logo.svg.png" alt="LOGO DE NUESTRO PATROCINADOR MAS DESTACADO">
             </div>
         </div>
     </div>
