feat: global manga filters

--- a/webcomics/templates/components/header.html
+++ b/webcomics/templates/components/header.html
@@ -27,7 +27,7 @@
                         <a class="nav-link d-flex align-items-center text-center" href="{% url 'index' %}">Inicio</a>
                     </li>
                     <li class="nav-item me-3">
-                        <a class="nav-link d-flex align-items-center text-center" href="#">Catálogo</a>
+                        <a class="nav-link d-flex align-items-center text-center" href="{% url 'library' %}">Catálogo</a>
                     </li>
                     <li class="nav-item dropdown me-3">
                         <a class="nav-link d-flex align-items-center text-center dropdown-toggle" href="#" id="navbarDropdown" role="button" data-bs-toggle="dropdown" aria-expanded="false">
