feat: first steps on library

--- a/webcomics/templates/components/footer.html
+++ b/webcomics/templates/components/footer.html
@@ -4,7 +4,7 @@
 {% endblock%}
 
 <footer>
-    <div class="group-a container">
+    <div class="container group-a">
         <div class="box">
             <ul>
                 <li><a href="#" class="footer-link link-secondary">EMPRESA</a></li>
