--- a/webcomics/templates/index.html
+++ b/webcomics/templates/index.html
@@ -64,5 +64,5 @@
 {% endblock %}
 
 {% block extra_js %}
-    <script src="{% static 'js/manga-slider.js' %}"></script>
+    <script src="{% static 'js/slider.js' %}"></script>
 {% endblock %}
