--- a/webcomics/templates/library.html
+++ b/webcomics/templates/library.html
@@ -1,20 +1,32 @@
 {% extends "./layouts/base.html" %}
 {% load static %}
-{% block title %}Inicio{% endblock %}
+{% block title %}Catálogo{% endblock %}
 {% block extra_css %}
     <link rel="stylesheet" href='{% static '/css/home.css'%}'">
-    <link rel="stylesheet" href='{% static '/css/manga-slider.css'%}'>
+    <link rel="stylesheet" href='{% static '/css/sliders.css'%}'>
 {% endblock %}
 
 {% block content %}
-    <div class="hero" style="height: 80vh;">
-    <div class="hero-content container">
-    {% for manga in high_rated_mangas %}
-        <section style="background-image: url('{{ manga.front_page.url }}');">
-            <p>AAAAAAAAA</p>
-        <section>
-    {% endfor %}
+<div class="hero-slider-container">
+    <div class="hero-slider">
+        {% for manga in high_rated_mangas %}
+        <div class="hero slider-section" style="height: 80vh; background-image: url('{{ manga.front_page.url }}');">
+            <div class="hero-content container">
+                <h1>{{ manga.nombre_del_manga }}</h1>
+            </div>
+        </div>
+        {% endfor %}
     </div>
+    <button class="hero-slider-button left">⟵</button>
+    <button class="hero-slider-button right">⟶</button>
+</div>
+<div id="main-container" class="container" style="padding-bottom: 20px">
+    <div class="main-content">
+        {% include "./components/ad_banner.html" %}
     </div>
-    pene
-{% endblock%}
+</div>
+{% endblock %}
+
+{% block extra_js %}
+    <script src="{% static 'js/slider.js' %}"></script>
+{% endblock %}
