--- a/webcomics/templates/components/header.html
+++ b/webcomics/templates/components/header.html
@@ -34,8 +34,8 @@
                             Acerca de
                         </a>
                         <ul class="dropdown-menu" aria-labelledby="navbarDropdown">
-                            <li><a class="dropdown-item" href="{% url 'about' %}">Equipo</a></li>
-                            <li><a class="dropdown-item" href="{% url 'about' %}">Ayuda</a></li>
+                            <li><a class="dropdown-item" href="{% url 'team' %}">Equipo</a></li>
+                            <li><a class="dropdown-item" href="{% url 'help' %}">Ayuda</a></li>
                         </ul>
                     </li>
                 </ul>
