--- a/webcomics/static/css/about.css
+++ b/webcomics/static/css/about.css
@@ -1,5 +1,3 @@
-
-
 .hero {
     position: relative;
     background-image: url('../src/backgrounds/background.jpg');
@@ -53,4 +51,39 @@
 
 .hero .btn:hover {
     background: darkred;
+}
+
+.team-member {
+    padding-top: 20px;
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+    margin-bottom: 20px;
+}
+
+.team-member img {
+    max-width: 275px;
+    border: 5px solid black;
+}
+
+.text-box {
+    text-align: left;
+}
+
+@media screen and (min-width: 992px) {
+    .team-member {
+        flex-direction: row;
+        align-items: flex-start;
+        text-align: center;
+    }
+
+    .team-member img {
+        max-width: 275px;
+        margin-right: 20px;
+    }
+
+    .text-box {
+    text-align: center;
+    }
 }
