--- a/webcomics/static/css/sliders.css
+++ b/webcomics/static/css/sliders.css
@@ -11,7 +11,7 @@
 
 .slider-section {
     min-width: 100%;
-    height: 80vh;
+    height: 45vh;
     box-sizing: border-box;
     background-size: cover;
     background-position: center;
@@ -55,6 +55,67 @@
     right: 10px;
 }
 
+.diagonal-slider {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  font-family: sans-serif;
+  overflow: hidden;
+  transform: skew(5deg);
+}
+
+.diagonal-slider-card {
+  flex: 1;
+  transition: all 1s ease-in-out;
+  height: 75vmin;
+  position: relative;
+}
+
+.diagonal-slider-card:not(:nth-child(5)) {
+  margin-right: 1em;
+}
+
+.diagonal-slider img {
+  width: 100%;
+  height: 100%;
+  object-fit: cover;
+  transition: all 1s ease-in-out;
+  filter: grayscale(100%);
+}
+
+.diagonal-slider-head {
+  color: black;
+  background: #ff1eadbf;
+  padding: 0.5em;
+  transform: rotate(-90deg);
+  transform-origin: 0% 0%;
+  transition: all 0.5s ease-in-out;
+  min-width: 100%;
+  text-align: center;
+  position: absolute;
+  bottom: 0;
+  left: 0;
+  font-size: 1em;
+  white-space: nowrap;
+}
+
+.diagonal-slider-card:hover {
+  flex-grow: 10;
+}
+
+.diagonal-slider-card:hover img {
+  filter: grayscale(0);
+}
+
+.diagonal-slider-card:hover .diagonal-slider-head {
+  text-align: center;
+  top: calc(100% - 2em);
+  color: white;
+  background: #00000080;
+  font-size: 2em;
+  transform: rotate(0deg) skew(-5deg);
+}
+
 /* Responsive */
 @media (max-width: 600px) {
     .hero-slider {
@@ -77,5 +138,17 @@
 
     .slider-section {
         height: 25vh;
+    }
+    
+    .diagonal-slider-card {
+        flex-grow: none;
+    }
+
+    .diagonal-slider img {
+        filter: none;
+    }
+
+    .diagonal-slider-card:hover .diagonal-slider-head {
+        transform: rotate(0deg) skew(0deg);
     }
 }
